force-app/main/default/objects/Discount_Request_Line_Item__c/Discount_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Stores Hardware, Plan or Ala Carte application discount request information</description>
    <label>Discount Request Item</label>
    <nameField>
        <displayFormat>DRI-{00000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Request Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>