force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Specifies the Ala carte application on which discount request is raised</description>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALK CoPilot Truck</fullName>
            </value>
            <value>
                <fullName>ALK Route Sync</fullName>
            </value>
            <value>
                <fullName>Automated Arrival and Departure</fullName>
            </value>
            <value>
                <fullName>CER Add-on - Forward Collision Warning and Follow Time Violation</fullName>
            </value>
            <value>
                <fullName>CER Add-on - Stability Control and Lane Departure Warning</fullName>
            </value>
            <value>
                <fullName>Circle of Service Workflow</fullName>
            </value>
            <value>
                <fullName>Content Delivery Basic</fullName>
            </value>
            <value>
                <fullName>Content Delivery Deluxe</fullName>
            </value>
            <value>
                <fullName>CoPilot Route Sync</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Games</fullName>
            </value>
            <value>
                <fullName>Driver Login</fullName>
            </value>
            <value>
                <fullName>Extended Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring (prev. VM)</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>In-Cab Video Training</fullName>
            </value>
            <value>
                <fullName>Maptuit NaviGo</fullName>
            </value>
            <value>
                <fullName>MCP50 In-CAB scanning</fullName>
            </value>
            <value>
                <fullName>Media Manager</fullName>
            </value>
            <value>
                <fullName>Mobile Computing Platform Screen Lock</fullName>
            </value>
            <value>
                <fullName>NaviGo Compliance</fullName>
            </value>
            <value>
                <fullName>NaviGo Fuel</fullName>
            </value>
            <value>
                <fullName>NaviGo Hazmat</fullName>
            </value>
            <value>
                <fullName>Odometer Positions</fullName>
            </value>
            <value>
                <fullName>Open Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Qualcomm Hours of Service (Macro)</fullName>
            </value>
            <value>
                <fullName>Qualcomm Hours of Service Mobile</fullName>
            </value>
            <value>
                <fullName>Qualcomm Mobility Services for Handheld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>