force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>Specifies the application Id</description>
    <label>Application Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>