force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Specifies comments on the requested discount</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>