force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Discount_Request__c.field-meta.xml
<CustomField>
    <fullName>Discount_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the parent discount request record to which the discount request line item is related</description>
    <label>Discount Request</label>
    <referenceTo>Discount_Request__c</referenceTo>
    <relationshipLabel>Discount Request Items</relationshipLabel>
    <relationshipName>Discount_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>