force-app/main/default/objects/Discount_Request_Line_Item__c/fields/DiscountQualifier__c.field-meta.xml
<CustomField>
    <fullName>DiscountQualifier__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Qualifier</label>
    <type>Text</type>
</CustomField>