force-app/main/default/objects/Discount_Request_Line_Item__c/fields/DiscountQualifierValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountQualifierValue__c</fullName>
    <description>Specifies the Discount Qualifier Value</description>
    <label>Discount Qualifier Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>