force-app/main/default/objects/Discount_Request_Line_Item__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>