force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <description>Specifies the fleet size of service plan or ala carte application</description>
    <inlineHelpText>The tier selected should reflect the actual number of units to be contracted. Quantity should not exceed opportunity quantity.</inlineHelpText>
    <label>Fleet Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-50</fullName>
            </value>
            <value>
                <fullName>51-1000</fullName>
            </value>
            <value>
                <fullName>1001-2500</fullName>
            </value>
            <value>
                <fullName>2501-5000</fullName>
            </value>
            <value>
                <fullName>5001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>