force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Specifies the justification on requested discount</description>
    <label>Justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Threat</fullName>
            </value>
            <value>
                <fullName>Fleet Size</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>