force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Opportunity_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quantity__c</fullName>
    <description>Specifies the opportunity quantity</description>
    <label>Opportunity Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>