force-app/main/default/objects/Discount_Request_Line_Item__c/fields/PercentDollar__c.field-meta.xml
<CustomField>
    <fullName>PercentDollar__c</fullName>
    <formula>&apos;&apos;</formula>
    <label>PercentDollar</label>
    <type>Text</type>
</CustomField>