force-app/main/default/objects/Discount_Request_Line_Item__c/fields/PlanRequest__c.field-meta.xml
<CustomField>
    <fullName>PlanRequest__c</fullName>
    <description>Specifies the Plan name</description>
    <label>Plan Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>