force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Specifies the platform of hardware on which the discount request is raised</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>