force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Promos_Available__c.field-meta.xml
<CustomField>
    <fullName>Promos_Available__c</fullName>
    <description>Specifies any promos available to the customer</description>
    <label>Promos Available</label>
    <type>TextArea</type>
</CustomField>