force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>