force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Requested_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount_Amount__c</fullName>
    <description>Specifies the amount of discount requested</description>
    <label>Requested Discount Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>