force-app/main/default/objects/Discount_Request_Line_Item__c/fields/Requested_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount_Percent__c</fullName>
    <description>Specifies the discount percent</description>
    <label>Requested Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>