force-app/main/default/objects/Discount_Request_Line_Item__c/fields/ServiceHardwareType__c.field-meta.xml
<CustomField>
    <fullName>ServiceHardwareType__c</fullName>
    <description>Specifies the Service Hardware Type value</description>
    <label>Service Hardware Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>