force-app/main/default/objects/Discount_Request_Line_Item__c/recordTypes/Ala_Carte_App_Request.recordType-meta.xml
<RecordType>
    <fullName>Ala_Carte_App_Request</fullName>
    <active>true</active>
    <description>Used to request discount on Ala Carte applications</description>
    <label>Ala Carte App Request</label>
</RecordType>