force-app/main/default/objects/Discount_Request_Line_Item__c/recordTypes/Hardware_Request.recordType-meta.xml
<RecordType>
    <fullName>Hardware_Request</fullName>
    <active>true</active>
    <description>Used to request hardware discounts</description>
    <label>Hardware Request</label>
</RecordType>