force-app/main/default/objects/Discount_Request_Line_Item__c/recordTypes/Plan_Request.recordType-meta.xml
<RecordType>
    <fullName>Plan_Request</fullName>
    <active>true</active>
    <description>Used to request discount on service plans</description>
    <label>Plan Request</label>
</RecordType>